fix screen overflow

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,3 @@
-ul {
-  list-style: none;
-}
-
-.page-item {
-  display: inline-block;
+.modal-open .modal {
+  overflow-x: scroll;
 }
